--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
