--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -20,13 +18,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^2.0.1",
-    "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/tsconfig": "^0.4.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.9",
-    "vue-tsc": "^1.6.5"
+    "vite": "^4.3.9"
   }
 }
