--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
     "vue3-table-lite": "^1.3.7",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
