--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
     "vue3-table-lite": "^1.3.7",
+    "vue3-xlsx": "^1.1.2",
     "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
