update vite config

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite build && vite preview",
+    "inlined-build": "vite build --config vite.config.inlined.ts",
+    "inlined-preview": "vite build --config vite.config.inlined.ts && start ./dist/index.html"
   },
   "dependencies": {
     "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "vite-plugin-singlefile": "^0.13.5",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
