--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
+    "vue3-apexcharts": "^1.4.4",
     "vue3-table-lite": "^1.3.7",
     "vue3-xlsx": "^1.1.2",
     "vuejs-paginate-next": "^1.0.2",
